# correlaidx-challenge2022-stuttgart

./: .gitignore  README.md  get_wikipedia_list.py  pyproject.toml  search.py
input/: names.xlsx
output/: Officers.csv
