[tool.poetry]
name = "people-search"
version = "0.1.0"
description = ""
authors = ["Philipp Wussow  <64583398+ShirkahnW@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
neo4j = "^5.3.0"
wikipedia = "^1.4.0"
beautifulsoup4 = "^4.11.1"
pandas = "^1.5.2"
lxml = "^4.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
